Use pytest for tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,13 +42,13 @@ before_install:
 
 install:
   - pip install -U setuptools pip
-  - pip install unittest2 mock pycurl flake8 tox-travis coveralls
+  - pip install pycurl flake8 coveralls
   - python setup.py clean --all
   - python setup.py install
 
 script:
   - if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then flake8 stripe tests; fi
-  - python -W all -bb -W error::BytesWarning -m coverage.__main__ run setup.py test
+  - python -W all -bb -W error::BytesWarning setup.py test --addopts "--cov=stripe"
 
 after_success:
   coveralls
