--- a/tox.ini
+++ b/tox.ini
@@ -8,29 +8,23 @@ envlist = py27, py34, py35, py36, pypy, pypy3
 
 [testenv]
 deps =
-    unittest2
     pycurl>=7.19
     requests>=0.8.8
-    mock
-    coverage
 commands =
     python setup.py clean --all
-    python -W all -bb -W error::BytesWarning -m coverage.__main__ run setup.py test {posargs}
+    python -W all -bb -W error::BytesWarning setup.py test --addopts "--cov=stripe {posargs}"
 setenv =
     STRIPE_TEST_PYCURL = true
 
 [testenv:py27]
 deps =
     flake8
-    unittest2
     pycurl>=7.19
     requests>=0.8.8
-    mock
-    coverage
 commands =
     flake8 stripe tests
     python setup.py clean --all
-    python -W all -bb -W error::BytesWarning -m coverage.__main__ run setup.py test {posargs}
+    python -W all -bb -W error::BytesWarning setup.py test --addopts "--cov=stripe {posargs}"
 
 [flake8]
 exclude =
