--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
-include CHANGELOG.md LICENSE LONG_DESCRIPTION.rst README.md VERSION tox.ini
+include .coveragerc .flake8 CHANGELOG.md LICENSE LONG_DESCRIPTION.rst README.md VERSION pytest.ini tox.ini
 recursive-include tests *.py
