--- a/tox.ini
+++ b/tox.ini
@@ -7,30 +7,12 @@
 envlist = py27, py34, py35, py36, pypy, pypy3
 
 [testenv]
-deps =
-    pycurl>=7.19
-    requests>=0.8.8
 commands =
-    python setup.py clean --all
-    python -W all -bb -W error::BytesWarning setup.py test --addopts "--cov=stripe {posargs}"
-setenv =
-    STRIPE_TEST_PYCURL = true
+    python setup.py test -a "{posargs:-n auto}"
 
 [testenv:py27]
 deps =
     flake8
-    pycurl>=7.19
-    requests>=0.8.8
 commands =
     flake8 stripe tests
-    python setup.py clean --all
-    python -W all -bb -W error::BytesWarning setup.py test --addopts "--cov=stripe {posargs}"
-
-[flake8]
-exclude =
-    six.py
-
-[coverage:run]
-source = stripe
-omit =
-    stripe/six.py
+    python setup.py test -a "{posargs:-n auto}"
