Use pipenv for managing developement virtualenv

--- a/tox.ini
+++ b/tox.ini
@@ -4,15 +4,21 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27, py34, py35, py36, pypy, pypy3
+envlist = py27,
+          py34,
+          py35,
+          py36,
+          pypy,
+          pypy3,
+          lint
+skip_missing_interpreters = true
 
 [testenv]
-commands =
-    python setup.py test -a "{posargs:-n auto}"
+description = run the unit tests under {basepython}
+commands = python setup.py test -a "{posargs:-n auto}"
 
-[testenv:py27]
-deps =
-    flake8
-commands =
-    flake8 stripe tests
-    python setup.py test -a "{posargs:-n auto}"
+[testenv:lint]
+description = run static analysis and style check using flake8
+basepython = python2.7
+deps = flake8
+commands = python -m flake8 --show-source stripe tests setup.py {posargs}
